# minesweeper_py

./: README.md  icon_mac.icns  minesweeper.spec  pyproject.toml
minesweeper_core/api/: controller.py  controller_action_markers.py  dtos.py  markers.py
minesweeper_core/constants/: configurations.py  default_configurations.py
minesweeper_core/data/: cell.py  field.py  field_configuration.py
minesweeper_core/logic/: exceptions.py  game_logic.py  utils.py
minesweeper_ui/: game_instance.py  minesweeper.py  utils.py
minesweeper_ui/widgets/: application_widget.py  custom_buttons.py  main_window_widget.py  widget_main_window.py  widget_new_game_popup.py
minesweeper_ui/widgets/dialogs/new_game/: dialog_buttons.py  dialog_form.py  dialog_widget.py
minesweeper_ui/widgets/field/: field_button.py  field_widget.py  utils.py
tests/minesweeper_core/api/: test_controller.py
tests/minesweeper_core/logic/: test_game_logic.py  test_utils.py
