[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = "Classic Minesweeper game"
authors = ["Oleksandr Kostenko <sanyokkua@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "minesweeper_core" }, { include = "minesweeper_ui" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PyQt6 = "^6.3.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.3"
pep8 = "^1.7.1"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"
flake8-broken-line = "^0.5.0"
flake8-bugbear = "^22.8.23"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.2.0"
flake8-mutable = "^1.2.0"
flake8-quotes = "^3.3.1"
black = "^22.6.0"
bandit = "^1.7.4"
autoflake = "^1.5.2"
coverage = "^6.4.4"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
